--- a/content_scripts/squashtv-nospoiler.css
+++ b/content_scripts/squashtv-nospoiler.css
@@ -1,60 +1,84 @@
 
-.videoplayer__title, .videoplayer__video img, .videoplayer__description, .item__title, .item__video img {
+article .featured-image img, .article-related .repeat-inner img, article .featured-image-container {
   display: none;
   opacity: 0;
 }
 
-.videoplayer__video .content::before, .item__video::before{
-    position: absolute;
-    content: 'Hidden By SquashTV Spoilers';
-    font-size: 2em;
-    margin: 0.5em;
-    font-weight: bold;
-    color: white;
+.vjs-time-control,  .vjs-progress-control, .featured {
+  display: none!important;
 }
 
+
+.squashtv-nospoiler-toplist{
+  text-align: center;
+  z-index: 999999999;
+    background: grey;
+    width: 50%;
+    margin: 2rem auto;
+    border-radius: 5px;
+    border: 3px solid #555;
+}
+
+.squashtv-nospoiler-toplist h1 {
+  font-size: 1.6rem;
+}
+
+.post-carousel h2.heading {
+  background: #777;
+  padding: 0.5rem;
+  border-radius: 3px 3px 0 0;
+  border-bottom: 3px solid black;
+}
+
+/* 
 .item__video {
   border: 1px solid #9e9e9e;
 }
 
 .item__video::before {
   font-size: 1em;
-}
+} */
 
-.squashtv-nospoiler-controls {
+.video-js .squashtv-nospoiler-controls {
   text-align: center;
   margin: 10px;
+
+  display: flex;
+  vertical-align: middle;
+  align-items: center;
+  justify-content: center;
 }
 
-.squashtv-nospoiler-controls button {
+.video-js .squashtv-nospoiler-controls button {
   opacity: .8;
   border: none;
   border-radius: 5px;
   background: #ffe426;
+  color: black;
   font-size: 1.3em;
   font-weight: bold;
   vertical-align: middle;
   margin-right: .3em;
 }
 
-.squashtv-nospoiler-controls button:hover {
+.video-js .squashtv-nospoiler-controls button:hover {
   opacity: 1;
   cursor: pointer;
 }
 
-.squashtv-nospoiler-controls input {
+.video-js .squashtv-nospoiler-controls input {
   opacity: .8;
   border-bottom: 4px solid #ffe426;
-  width: 2em;
+  width: 3em;
   font-size: 1.1em;
   font-weight: bold;
 }
 
-.squashtv-nospoiler-controls input:hover {
+.video-js .squashtv-nospoiler-controls input:hover {
   opacity: 1;
 }
 
-.squashtv-nospoiler-controls span {
+.video-js .squashtv-nospoiler-controls span {
   color: white;
   font-weight: bold;;
 }
